@@ -1,4 +1,4 @@
-Linux STREAMS (LiS) -- unstable release introduction.  2006-09-19
+Linux STREAMS (LiS) -- unstable release introduction.  2006-09-22
 $Id: README-alpha,v 0.9.2.10 2006/09/24 21:56:38 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
@@ -7,7 +7,7 @@ See the end for copying conditions (for this file).
 Linux STREAMS (LiS)
 ===================
 
-Package LiS-2.18.4.rc3 Released 2006-09-19.
+Package LiS-2.18.4.rc3 Released 2006-09-22.
 
 This is unstable release software.
 
