@@ -1,4 +1,4 @@
-Linux STREAMS (LiS) -- read me CVS file.  2006-09-19
+Linux STREAMS (LiS) -- read me CVS file.  2006-09-22
 $Id: README-cvs,v 0.9.2.11 2006/09/24 21:56:38 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
