@@ -1,4 +1,4 @@
-Linux STREAMS (LiS) -- acknowledgements.  2006-09-19
+Linux STREAMS (LiS) -- acknowledgements.  2006-09-22
 $Id: THANKS,v 1.1.6.7 2006/09/24 21:56:38 brian Exp $
 Copyright (c) 2001-2006  OpenSS7 Corporation. <http://www.openss7.com/>
 Copyright (c) 1997-2000  Brian Bidulock <bidulock@openss7.org>
